force-app/main/default/objects/OpportunityLineItem/fields/crms11__Add_on_Discount__c.field-meta.xml
<CustomField>
    <fullName>crms11__Add_on_Discount__c</fullName>
    <description>It is used to store the add on discount applied to the add-on product.</description>
    <label>Add-on Discount</label>
    <precision>7</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>