force-app/main/default/objects/OpportunityLineItem/fields/crms11__Addon_Multiple_of_Master__c.field-meta.xml
<CustomField>
    <fullName>crms11__Addon_Multiple_of_Master__c</fullName>
    <label>Addon Multiple of Master</label>
    <precision>13</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>