force-app/main/default/objects/OpportunityLineItem/fields/crms11__Contribution__c.field-meta.xml
<CustomField>
    <fullName>crms11__Contribution__c</fullName>
    <description>Contribution calculates margin on sale, (As UnitPrice - Unit_Cost__c)</description>
    <formula>IF($Setup.crms11__FlexPricer_Settings__c.crms11__Disable_Contribution_Calculation__c, IF(  ISNULL(crms11__Unit_Cost__c), NULL , TotalPrice  - ( Quantity  * crms11__Unit_Cost__c ) ), NULL)</formula>
    <inlineHelpText>Contribution calculates margin on sale</inlineHelpText>
    <label>Contribution</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>