force-app/main/default/objects/OpportunityLineItem/fields/crms11__Dated_Product_Discount__c.field-meta.xml
<CustomField>
    <fullName>crms11__Dated_Product_Discount__c</fullName>
    <label>Dated Product Discount</label>
    <precision>7</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>