force-app/main/default/objects/OpportunityLineItem/fields/crms11__Default_Quantity_Multiplier__c.field-meta.xml
<CustomField>
    <fullName>crms11__Default_Quantity_Multiplier__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Default quantity multiplier is used to calculated bulk quantity to calculate bulk units. For example if multiplier is 0.001. Quantity = Actual Quantity * Multiplier.</description>
    <inlineHelpText>Default quantity multiplier is used to calculated bulk quantity to calculate bulk units. For example if multiplier is 0.001. Quantity = Actual Quantity * Multiplier.</inlineHelpText>
    <label>Quantity Rate</label>
    <referenceTo>crms11__Quantity_Rate__c</referenceTo>
    <relationshipLabel>Opportunity Product</relationshipLabel>
    <relationshipName>Default_For_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>