force-app/main/default/objects/OpportunityLineItem/fields/crms11__Floor_Quantity_Y__c.field-meta.xml
<CustomField>
    <fullName>crms11__Floor_Quantity_Y__c</fullName>
    <label>Floor Quantity Y</label>
    <precision>13</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>