force-app/main/default/objects/OpportunityLineItem/fields/crms11__Group_Name__c.field-meta.xml
<CustomField>
    <fullName>crms11__Group_Name__c</fullName>
    <label>Group Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>