force-app/main/default/objects/OpportunityLineItem/fields/crms11__Is_Bundle__c.field-meta.xml
<CustomField>
    <fullName>crms11__Is_Bundle__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This checkbox is automatically set to true if the product is a Bundle Product</inlineHelpText>
    <label>Is Bundle</label>
    <type>Checkbox</type>
</CustomField>