force-app/main/default/objects/OpportunityLineItem/fields/crms11__Is_Bundle_Item__c.field-meta.xml
<CustomField>
    <fullName>crms11__Is_Bundle_Item__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This checkbox is automatically set to true if the product is part of a Bundle</inlineHelpText>
    <label>Is Bundle Item</label>
    <type>Checkbox</type>
</CustomField>