force-app/main/default/objects/OpportunityLineItem/fields/crms11__Is_MasterProduct__c.field-meta.xml
<CustomField>
    <fullName>crms11__Is_MasterProduct__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is MasterProduct</label>
    <type>Checkbox</type>
</CustomField>