force-app/main/default/objects/OpportunityLineItem/fields/crms11__Is_Required_Addon__c.field-meta.xml
<CustomField>
    <fullName>crms11__Is_Required_Addon__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Required Addon</label>
    <type>Checkbox</type>
</CustomField>