force-app/main/default/objects/OpportunityLineItem/fields/crms11__Location__c.field-meta.xml
<CustomField>
    <fullName>crms11__Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Location</label>
    <referenceTo>crms11__Location__c</referenceTo>
    <relationshipLabel>Opportunity Product</relationshipLabel>
    <relationshipName>Opportunity_Product</relationshipName>
    <type>Lookup</type>
</CustomField>