force-app/main/default/objects/OpportunityLineItem/fields/crms11__Master_GUID__c.field-meta.xml
<CustomField>
    <fullName>crms11__Master_GUID__c</fullName>
    <label>Master GUID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>