force-app/main/default/objects/OpportunityLineItem/fields/crms11__Original_Discount__c.field-meta.xml
<CustomField>
    <fullName>crms11__Original_Discount__c</fullName>
    <label>Original Discount</label>
    <precision>7</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>