force-app/main/default/objects/OpportunityLineItem/fields/crms11__Original_Quantity1__c.field-meta.xml
<CustomField>
    <fullName>crms11__Original_Quantity1__c</fullName>
    <label>Original Quantity</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>