force-app/main/default/objects/OpportunityLineItem/fields/crms11__Original_Quantity__c.field-meta.xml
<CustomField>
    <fullName>crms11__Original_Quantity__c</fullName>
    <inlineHelpText>For products that are part of the bundle this field hold the original quantity of the product that is offered is the customer selects a single quantity of the Bundle Product</inlineHelpText>
    <label>Bundle Quantity Multiple</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>