force-app/main/default/objects/OpportunityLineItem/fields/crms11__Original_Sales_Price__c.field-meta.xml
<CustomField>
    <fullName>crms11__Original_Sales_Price__c</fullName>
    <label>Original Sales Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>