force-app/main/default/objects/OpportunityLineItem/fields/crms11__Percentage_Value__c.field-meta.xml
<CustomField>
    <fullName>crms11__Percentage_Value__c</fullName>
    <label>Percentage Value</label>
    <precision>13</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>