force-app/main/default/objects/OpportunityLineItem/fields/crms11__Product_Type_Id__c.field-meta.xml
<CustomField>
    <fullName>crms11__Product_Type_Id__c</fullName>
    <inlineHelpText>This field contains the Id of the Product to which this OpportunityLineItem is related incase it is part of a Bundle</inlineHelpText>
    <label>Product Type Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>