force-app/main/default/objects/OpportunityLineItem/fields/crms11__Quantity_X_Label__c.field-meta.xml
<CustomField>
    <fullName>crms11__Quantity_X_Label__c</fullName>
    <label>Quantity X Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>