force-app/main/default/objects/OpportunityLineItem/fields/crms11__Quantity_Z__c.field-meta.xml
<CustomField>
    <fullName>crms11__Quantity_Z__c</fullName>
    <description>User Entered Quantity Rate Multiplier 2</description>
    <inlineHelpText>User Entered Quantity Rate Multiplier 2</inlineHelpText>
    <label>Quantity Z</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>