force-app/main/default/objects/OpportunityLineItem/fields/crms11__Related_To__c.field-meta.xml
<CustomField>
    <fullName>crms11__Related_To__c</fullName>
    <inlineHelpText>This field contains the Id of the OpportunityLineItem to which this current OpportunityLineItem is related incase it is part of a Bundle</inlineHelpText>
    <label>Related To</label>
    <length>20</length>
    <type>Text</type>
</CustomField>