force-app/main/default/objects/OpportunityLineItem/fields/crms11__Total_Discount__c.field-meta.xml
<CustomField>
    <fullName>crms11__Total_Discount__c</fullName>
    <description>Total applied discount including custom discount and standard discount. Based on the list price.</description>
    <inlineHelpText>Total applied discount to original list price.</inlineHelpText>
    <label>Total Discount</label>
    <precision>7</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>