force-app/main/default/objects/OpportunityLineItem/fields/crms11__Translation__c.field-meta.xml
<CustomField>
    <fullName>crms11__Translation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Translation</label>
    <referenceTo>crms11__Translation__c</referenceTo>
    <relationshipLabel>Opportunity Product</relationshipLabel>
    <relationshipName>Opportunity_Product</relationshipName>
    <type>Lookup</type>
</CustomField>