force-app/main/default/objects/OpportunityLineItem/fields/crms11__Use_Opp_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>crms11__Use_Opp_Close_Date__c</fullName>
    <formula>ISBLANK(crms11__Start_Date__c) &amp;&amp; ISBLANK(crms11__End_Date__c) &amp;&amp; ISBLANK(Opportunity.crms11__Default_End_Date__c) &amp;&amp; ISBLANK(Opportunity.crms11__Default_Start_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Use Opp Close Date</label>
    <type>Checkbox</type>
</CustomField>