force-app/main/default/objects/OpportunityLineItem/fields/crms11__User_Discount__c.field-meta.xml
<CustomField>
    <fullName>crms11__User_Discount__c</fullName>
    <description>A discount which can be applied to an opportunity by the account manager as a ‘special discount’</description>
    <label>User Discount</label>
    <precision>7</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>