force-app/main/default/objects/OpportunityLineItem/fields/crms11__Volume_Discount__c.field-meta.xml
<CustomField>
    <fullName>crms11__Volume_Discount__c</fullName>
    <inlineHelpText>The discount percent applicable based on volume purchase of this product</inlineHelpText>
    <label>Volume Discount</label>
    <precision>7</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>